Ajout de la section newspaper

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -19,9 +19,9 @@
         </div>
 
         <nav class="nav-mobile d-flex">
-            <a href="#" class="flex-fill text-center bg-primary text-white border-right font-weight-bold d-flex align-items-center justify-content-center">Actualites au Gabon</a>
-            <a href="#" class="flex-fill text-center bg-primary text-white border-right font-weight-bold d-flex align-items-center justify-content-center">Divertissement</a>
-            <a href="#" class="flex-fill text-center bg-primary text-white border-right font-weight-bold d-flex align-items-center justify-content-center">Hygienes & Sante</a>
+            <a href="#" class="flex-fill text-center bg-primary text-white border-right font-weight-bold d-flex align-items-center justify-content-center font-size-1">Actualites au Gabon</a>
+            <a href="#" class="flex-fill text-center bg-primary text-white border-right font-weight-bold d-flex align-items-center justify-content-center font-size-1">Divertissement</a>
+            <a href="#" class="flex-fill text-center bg-primary text-white border-right font-weight-bold d-flex align-items-center justify-content-center font-size-1">Hygienes & Sante</a>
         </nav>
 
         <div class="banner-img">
@@ -35,7 +35,119 @@
 
     <main>
         <section>
-            <!-- actualites , news-papers -->
+            <div class="article-news container">
+                <div id="article-news" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <div class="card border-0 d-block w-100 bg-gray">
+                            <h3 class="h6 text-primary px-2">Actu du jour - Dernier point de presse</h3>
+                            <iframe class="card-img-top border-0" height="200px" src="https://www.youtube.com/embed/ozvrHrjhW0o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <div class="card-body p-0">
+                                <div class="card-title d-flex justify-content-between align-items-center">
+                                    <h2 class="font-size-2">Coronavirus: 2 nouveaux cas au Gabon !</h2>
+                                    <p class="small text-secondary">
+                                        <span>101 vues</span>
+                                    </p>
+                                </div>
+                              <div class="card-text d-flex justify-content-between">
+                                <div>
+                                    <div>
+                                        Partager avec :
+                                    </div>
+                                    <div class="banner-icon">
+                                        <a href="#" class="btn btn-primary font-size-3">
+                                            <i class="fab fa-facebook"></i> Partager avec facebook
+                                        </a>    
+                                        <a href="#" class="btn btn-outline-success bg-white font-size-3">
+                                            <i class="fab fa-whatsapp"></i> Partager avec Whatsapp
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="banner-valuation font-weight-bold font-size-2">
+                                    <span>115 likes</span>
+                                    <span><i class="far fa-heart"></i></span>
+                                </div>
+                              </div>
+                            </div>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <div class="card border-0 d-block w-100 bg-gray">
+                            <h3 class="h6 text-primary">Actu du jour - Dernier point de presse</h3>
+                            <iframe class="card-img-top border-0" height="200px" src="https://www.youtube.com/embed/ozvrHrjhW0o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <div class="card-body p-0">
+                                <div class="card-title d-flex justify-content-between align-items-center">
+                                    <h2 class="font-size-2">Coronavirus: 2 nouveaux cas au Gabon !</h2>
+                                    <p class="small text-secondary">
+                                        <span>101 vues</span>
+                                    </p>
+                                </div>
+                              <div class="card-text d-flex justify-content-between">
+                                <div>
+                                    <div>
+                                        Partager avec :
+                                    </div>
+                                    <div class="banner-icon">
+                                        <a href="#" class="btn btn-primary font-size-3">
+                                            <i class="fab fa-facebook"></i> Partager avec facebook
+                                        </a>    
+                                        <a href="#" class="btn btn-outline-success bg-white font-size-3">
+                                            <i class="fab fa-whatsapp"></i> Partager avec Whatsapp
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="banner-valuation font-weight-bold font-size-2">
+                                    <span>115 likes</span>
+                                    <span><i class="far fa-heart"></i></span>
+                                </div>
+                              </div>
+                            </div>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <div class="card border-0 d-block w-100 bg-gray">
+                            <h3 class="h6 text-primary">Actu du jour - Dernier point de presse</h3>
+                            <iframe class="card-img-top border-0" height="200px" src="https://www.youtube.com/embed/ozvrHrjhW0o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <div class="card-body p-0">
+                                <div class="card-title d-flex justify-content-between align-items-center">
+                                    <h2 class="font-size-2">Coronavirus: 2 nouveaux cas au Gabon !</h2>
+                                    <p class="small text-secondary">
+                                        <span>101 vues</span>
+                                    </p>
+                                </div>
+                              <div class="card-text d-flex justify-content-between">
+                                <div>
+                                    <div>
+                                        Partager avec :
+                                    </div>
+                                    <div class="banner-icon">
+                                        <a href="#" class="btn btn-primary font-size-3">
+                                            <i class="fab fa-facebook"></i> Partager avec facebook
+                                        </a>    
+                                        <a href="#" class="btn btn-outline-success bg-white font-size-3">
+                                            <i class="fab fa-whatsapp"></i> Partager avec Whatsapp
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="banner-valuation font-weight-bold font-size-2">
+                                    <span>115 likes</span>
+                                    <span><i class="far fa-heart"></i></span>
+                                </div>
+                              </div>
+                            </div>
+                        </div>
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#article-news" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon bg-secondary px-2 py-4" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#article-news" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon bg-secondary px-2 py-4" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
+            </div>
         </section>
 
         <section>
