--- a/mobile/index.html
+++ b/mobile/index.html
@@ -28,14 +28,14 @@
             <img src="https://gaboninfoslive.files.wordpress.com/2016/07/sans-titre-00053.png" class="img-fluid" alt="">
         </div>
 
-        <div class="d-flex justify-content-center text-center my-5">
+        <div class="d-flex justify-content-center text-center my-3">
             <p class="text-primary font-weight-bold w-50">Informez vous sur le covid 19 et gagner de nombreux lots</p>
         </div>
     </header>
 
     <main>
         <section class="mb-5">
-            <div class="article-news container">
+            <div class="article-news">
                 <div id="article-news" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
@@ -147,6 +147,37 @@
                       <span class="sr-only">Next</span>
                     </a>
                   </div>
+            </div>
+            <div class="text-right pr-4 my-3 font-weight-bold">
+                <span>Voir toute les infos</span> <a href="#" class="text-dark ml-2"><i class="fas fa-ellipsis-v"></i></a>
+            </div>
+
+            <div class="row">
+                <div class="col-3 text-white rounded text-center bg-primary text-white font-weight-bold font-size-1 d-flex flex-column justify-content-center align-items-center">
+                    <p class=" p-0 my-0">30</p>
+                    <p class="my-1">cas suspects</p>
+                </div>
+                <div class="col-3 text-white rounded bg-warning font-weight-bold d-flex flex-column justify-content-center align-items-center">
+                    <p class=" p-0 my-0">18</p>
+                    <p class="my-1">contamines</p>
+                </div>
+                <div class="col-3 text-white rounded text-center bg-danger font-weight-bold d-flex flex-column justify-content-center align-items-center">
+                    <p class=" p-0 my-0">1</p>
+                    <p class="my-1">mort</p>
+                </div>
+                <div class="col-3 text-white rounded text-center bg-success font-weight-bold d-flex flex-column justify-content-center align-items-center">
+                    <p class=" p-0 my-0">0</p>
+                    <p class="my-1">Gueris</p>
+                </div>
+            </div>
+
+            <div class="rappel mt-5">
+                <div class="position-absolute p-2 bg-blue text-white font-weight-bold">
+                    Rappel
+                </div>
+                <div class="rappel-info">
+                    <p class="bg-primary text-white p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis minima cupiditate nostrum.</p>
+                </div>
             </div>
         </section>
 
