mvp section jeux

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -64,7 +64,7 @@
             <h2 class="h2"><span>A la une -</span>conseil des ministres speciale hier matin</h2>
             <div>
                 <div>
-                    <img src="http://covid19.ecole241.org/themes/covid19-template/assets/img/images.jpeg" class="card-img-top" alt="...">
+                    <img src="http://covid19.ecole241.org/themes/covid19-template/assets/img/images.jpeg" class="card-img-top img" alt="...">
                     <div class="card-body">
                         <div>
                           <h3 class="h3">Quels mesures preventives </h3>
@@ -83,6 +83,20 @@
 
         <section>
             <!-- Jeux -->
+            <h3 class="h3">joueuz et gagner des forfait internet</h3>
+            <img src="img/jeu-de-mot.jpg" class="card-img img" alt="...">
+            <div id="slider">
+                <p>classement joueur</p>
+                <figure>
+                    <img src="https://cdn.icon-icons.com/icons2/877/PNG/128/male-profile-picture_icon-icons.com_68388.png" alt="">
+                    <img src="https://cdn.icon-icons.com/icons2/877/PNG/128/male-profile-picture_icon-icons.com_68388.png" alt="">
+                    <img src="https://cdn.icon-icons.com/icons2/877/PNG/128/male-profile-picture_icon-icons.com_68388.png" alt="">
+                    <img src="https://cdn.icon-icons.com/icons2/877/PNG/128/male-profile-picture_icon-icons.com_68388.png" alt="">
+                    <img src="https://cdn.icon-icons.com/icons2/877/PNG/128/male-profile-picture_icon-icons.com_68388.png" alt="">
+                    <img src="https://cdn.icon-icons.com/icons2/877/PNG/128/male-profile-picture_icon-icons.com_68388.png" alt="">
+                </figure>
+            </div>
+                <button>plus de jeux</button>
         </section>
     </main>
     
