hotfix/banner and navbar

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -13,15 +13,15 @@
     <header>
         <div class="banner container d-flex justify-content-between align-items-center my-3">
             <div class="h4 p-0 m-0">
-                <span class="text-warning">Covid-19</span> <span class="text-primary">info</span>
+                <span class="is-orange">Covid-19</span> <span class="text-primary">info</span>
             </div>
             <div class="divider bg-primary"></div>
         </div>
 
         <nav class="nav-mobile d-flex">
-            <a href="#" class="flex-fill text-center bg-primary text-white border-right font-weight-bold d-flex align-items-center justify-content-center font-size-1">Actualites au Gabon</a>
-            <a href="#" class="flex-fill text-center bg-primary text-white border-right font-weight-bold d-flex align-items-center justify-content-center font-size-1">Divertissement</a>
-            <a href="#" class="flex-fill text-center bg-primary text-white border-right font-weight-bold d-flex align-items-center justify-content-center font-size-1">Hygienes & Sante</a>
+            <a href="#" class="flex-fill bg-primary text-white border-right font-weight-bold d-flex align-items-center justify-content-center font-size-sm1">Actualites au Gabon</a>
+            <a href="#" class="flex-fill bg-primary text-white border-right font-weight-bold d-flex align-items-center justify-content-center font-size-sm1">Divertissement</a>
+            <a href="#" class="flex-fill bg-primary text-white border-right font-weight-bold d-flex align-items-center justify-content-center font-size-sm1">Hygienes & Sante</a>
         </nav>
 
         <div class="banner-img">
@@ -38,32 +38,33 @@
             <div class="article-news">
                 <div id="article-news" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
+
                       <div class="carousel-item active">
-                        <div class="card border-0 d-block w-100 bg-gray">
-                            <h3 class="h6 text-primary px-2">Actu du jour - Dernier point de presse</h3>
+                        <div class="card border-0 bg-gray">
+                            <h3 class="h6 text-primary px-2 font-weight-bold pt-2">Actu du jour - Dernier point de presse</h3>
                             <iframe class="card-img-top border-0" height="200px" src="https://www.youtube.com/embed/ozvrHrjhW0o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                            <div class="card-body p-0">
+                            <div class="card-body p-2">
                                 <div class="card-title d-flex justify-content-between align-items-center">
-                                    <h2 class="font-size-2">Coronavirus: 2 nouveaux cas au Gabon !</h2>
-                                    <p class="small text-secondary">
+                                    <h2 class="font-size-sm1 font-weight-bold">Coronavirus: 2 nouveaux cas au Gabon !</h2>
+                                    <p class="small text-secondary font-size-sm">
                                         <span>101 vues</span>
                                     </p>
                                 </div>
-                              <div class="card-text d-flex justify-content-between">
+                                <div class="card-text d-flex justify-content-between">
                                 <div>
                                     <div>
                                         Partager avec :
                                     </div>
-                                    <div class="banner-icon">
-                                        <a href="#" class="btn btn-primary font-size-3">
+                                    <div class="banner-icon d-flex justify-content-between">
+                                        <a href="#" class="btn btn-primary font-size-tiny">
                                             <i class="fab fa-facebook"></i> Partager avec facebook
                                         </a>    
-                                        <a href="#" class="btn btn-outline-success bg-white font-size-3">
+                                        <a href="#" class="btn btn-outline-success bg-white font-size-tiny ml-3">
                                             <i class="fab fa-whatsapp"></i> Partager avec Whatsapp
                                         </a>
                                     </div>
                                 </div>
-                                <div class="banner-valuation font-weight-bold font-size-2">
+                                <div class="banner-valuation font-weight-bold font-size-sm">
                                     <span>115 likes</span>
                                     <span><i class="far fa-heart"></i></span>
                                 </div>
@@ -72,31 +73,31 @@
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <div class="card border-0 d-block w-100 bg-gray">
-                            <h3 class="h6 text-primary">Actu du jour - Dernier point de presse</h3>
+                        <div class="card border-0 bg-gray">
+                            <h3 class="h6 text-primary px-2 font-weight-bold pt-2">Actu du jour - Dernier point de presse</h3>
                             <iframe class="card-img-top border-0" height="200px" src="https://www.youtube.com/embed/ozvrHrjhW0o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                            <div class="card-body p-0">
+                            <div class="card-body p-2">
                                 <div class="card-title d-flex justify-content-between align-items-center">
-                                    <h2 class="font-size-2">Coronavirus: 2 nouveaux cas au Gabon !</h2>
-                                    <p class="small text-secondary">
+                                    <h2 class="font-size-sm1 font-weight-bold">Coronavirus: 2 nouveaux cas au Gabon !</h2>
+                                    <p class="small text-secondary font-size-sm">
                                         <span>101 vues</span>
                                     </p>
                                 </div>
-                              <div class="card-text d-flex justify-content-between">
+                                <div class="card-text d-flex justify-content-between">
                                 <div>
                                     <div>
                                         Partager avec :
                                     </div>
-                                    <div class="banner-icon">
-                                        <a href="#" class="btn btn-primary font-size-3">
+                                    <div class="banner-icon d-flex justify-content-between">
+                                        <a href="#" class="btn btn-primary font-size-tiny">
                                             <i class="fab fa-facebook"></i> Partager avec facebook
                                         </a>    
-                                        <a href="#" class="btn btn-outline-success bg-white font-size-3">
+                                        <a href="#" class="btn btn-outline-success bg-white font-size-tiny ml-3">
                                             <i class="fab fa-whatsapp"></i> Partager avec Whatsapp
                                         </a>
                                     </div>
                                 </div>
-                                <div class="banner-valuation font-weight-bold font-size-2">
+                                <div class="banner-valuation font-weight-bold font-size-sm">
                                     <span>115 likes</span>
                                     <span><i class="far fa-heart"></i></span>
                                 </div>
@@ -105,31 +106,31 @@
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <div class="card border-0 d-block w-100 bg-gray">
-                            <h3 class="h6 text-primary">Actu du jour - Dernier point de presse</h3>
+                        <div class="card border-0 bg-gray">
+                            <h3 class="h6 text-primary px-2 font-weight-bold pt-2">Actu du jour - Dernier point de presse</h3>
                             <iframe class="card-img-top border-0" height="200px" src="https://www.youtube.com/embed/ozvrHrjhW0o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                            <div class="card-body p-0">
+                            <div class="card-body p-2">
                                 <div class="card-title d-flex justify-content-between align-items-center">
-                                    <h2 class="font-size-2">Coronavirus: 2 nouveaux cas au Gabon !</h2>
-                                    <p class="small text-secondary">
+                                    <h2 class="font-size-sm1 font-weight-bold">Coronavirus: 2 nouveaux cas au Gabon !</h2>
+                                    <p class="small text-secondary font-size-sm">
                                         <span>101 vues</span>
                                     </p>
                                 </div>
-                              <div class="card-text d-flex justify-content-between">
+                                <div class="card-text d-flex justify-content-between">
                                 <div>
                                     <div>
                                         Partager avec :
                                     </div>
-                                    <div class="banner-icon">
-                                        <a href="#" class="btn btn-primary font-size-3">
+                                    <div class="banner-icon d-flex justify-content-between">
+                                        <a href="#" class="btn btn-primary font-size-tiny">
                                             <i class="fab fa-facebook"></i> Partager avec facebook
                                         </a>    
-                                        <a href="#" class="btn btn-outline-success bg-white font-size-3">
+                                        <a href="#" class="btn btn-outline-success bg-white font-size-tiny ml-3">
                                             <i class="fab fa-whatsapp"></i> Partager avec Whatsapp
                                         </a>
                                     </div>
                                 </div>
-                                <div class="banner-valuation font-weight-bold font-size-2">
+                                <div class="banner-valuation font-weight-bold font-size-sm">
                                     <span>115 likes</span>
                                     <span><i class="far fa-heart"></i></span>
                                 </div>
@@ -138,35 +139,27 @@
                         </div>
                       </div>
                     </div>
-                    <a class="carousel-control-prev" href="#article-news" role="button" data-slide="prev">
-                      <span class="carousel-control-prev-icon bg-secondary px-2 py-4" aria-hidden="true"></span>
-                      <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#article-news" role="button" data-slide="next">
-                      <span class="carousel-control-next-icon bg-secondary px-2 py-4" aria-hidden="true"></span>
-                      <span class="sr-only">Next</span>
-                    </a>
-                  </div>
+                </div>
             </div>
             <div class="text-right pr-4 my-3 font-weight-bold">
                 <span>Voir toute les infos</span> <a href="#" class="text-dark ml-2"><i class="fas fa-ellipsis-v"></i></a>
             </div>
 
             <div class="d-flex w-100">
-                <div class="w-25 text-white rounded text-center bg-primary text-white font-weight-bold font-size-1 d-flex flex-column justify-content-center align-items-center">
-                    <p class=" p-0 my-0">30</p>
+                <div class="w-25 font-size-sm text-white rounded text-center bg-primary text-white font-weight-bold d-flex flex-column justify-content-center align-items-center">
+                    <p class=" p-0 h6 font-weight-bold my-0">30</p>
                     <p class="my-1">cas suspects</p>
                 </div>
-                <div class="w-25 text-white rounded bg-warning font-weight-bold d-flex flex-column justify-content-center align-items-center">
-                    <p class=" p-0 my-0">18</p>
+                <div class="w-25 font-size-sm text-white rounded bg-warning font-weight-bold d-flex flex-column justify-content-center align-items-center">
+                    <p class=" p-0 h6 font-weight-bold my-0">18</p>
                     <p class="my-1">contamines</p>
                 </div>
-                <div class="w-25 text-white rounded text-center bg-danger font-weight-bold d-flex flex-column justify-content-center align-items-center">
-                    <p class=" p-0 my-0">1</p>
+                <div class="w-25 font-size-sm text-white rounded text-center bg-danger font-weight-bold d-flex flex-column justify-content-center align-items-center">
+                    <p class=" p-0 h6 font-weight-bold my-0">1</p>
                     <p class="my-1">mort</p>
                 </div>
-                <div class="w-25 text-white rounded text-center bg-success font-weight-bold d-flex flex-column justify-content-center align-items-center">
-                    <p class=" p-0 my-0">0</p>
+                <div class="w-25 font-size-sm text-white rounded text-center bg-success font-weight-bold d-flex flex-column justify-content-center align-items-center">
+                    <p class=" p-0 h6 font-weight-bold my-0">0</p>
                     <p class="my-1">Gueris</p>
                 </div>
             </div>
@@ -276,7 +269,7 @@
             </div>
 
             <div class="game-ranking">
-                <h3 class="text-secondary h5 font-weight-bold font-size-1">Top des meilleurs joueurs de covid-19</h3>
+                <h3 class="text-secondary h5 font-weight-bold font-size-sm1">Top des meilleurs joueurs de covid-19</h3>
                 <div class="gamers d-flex justify-content-around mb-3">
                     <div class="d-flex flex-column justify-content-center">
                         <img src="https://cdn.icon-icons.com/icons2/877/PNG/128/male-profile-picture_icon-icons.com_68388.png" alt="">
