--- a/mobile/index.html
+++ b/mobile/index.html
@@ -164,18 +164,19 @@
                 </div>
             </div>
 
-            <!-- <div class="rappel mt-5">
-                <div class="position-absolute p-2 bg-blue text-white font-weight-bold">
+            <div class="reminder mt-4">
+                <div class="reminder-title bg-blue h-100 text-white d-inline-block p-2 font-weight-bold">
                     Rappel
                 </div>
-                <div class="rappel-info">
-                    <p class="bg-primary text-white p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis minima cupiditate nostrum.</p>
+                <div class="reminder-content d-flex font-weight-bold bg-primary">
+                    <p class="pt-2 text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, perspiciatis.</p>
+                    <p class="pt-2 text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, perspiciatis.</p>
                 </div>
-            </div> -->
+            </div>
         </section>
 
         <section class="articles mt-5">
-            <div class="card border-0 mb-3">
+            <div class="card border-0 mb-3 px-1">
                 <h2 class="h6 text-primary my-3 px-3">A la une - Conseil des ministre special hier matin</h2>
                 <img src="http://covid19.ecole241.org/themes/covid19-template/assets/img/images.jpeg" class="card-img-top rounded-0" alt="">
                 <div class="card-body">
@@ -193,7 +194,7 @@
                 </div>
             </div>
 
-            <div class="card border-0 mb-3">
+            <div class="card border-0 mb-3 px-1">
                 <h2 class="h6 text-primary my-3 px-3">A la une - Conseil des ministre special hier matin</h2>
                 <img src="http://covid19.ecole241.org/themes/covid19-template/assets/img/images.jpeg" class="card-img-top rounded-0" alt="">
                 <div class="card-body">
@@ -211,7 +212,7 @@
                 </div>
             </div>
 
-            <div class="card border-0">
+            <div class="card border-0 px-1">
                 <h2 class="h6 text-primary my-3 px-3">A la une - Conseil des ministre special hier matin</h2>
                 <img src="http://covid19.ecole241.org/themes/covid19-template/assets/img/images.jpeg" class="card-img-top rounded-0" alt="">
                 <div class="card-body">
@@ -232,7 +233,7 @@
         </section>
 
         <section class="mt-5 mb-5">
-            <h3 class="h6 text-primary">Jouer et gagnez des forfaits internet</h3>
+            <h3 class="h6 text-primary font-weight-bold px-3">Jouer et gagnez des forfaits internet</h3>
             <div id="game" class="carousel slide mb-3" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -301,7 +302,7 @@
     </main>
     
 
-    <footer></footer>
+    <footer class="bg-primary"></footer>
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
